# ALEXANDER_HEBER

./: Presentacion simple.pptx  README.md
Chessino/: CMakeLists.txt  Chessino_es_PE.ts  board.cpp  board.h  board.ui  infodetails.cpp  infodetails.h  infodetails.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res_images.qrc  square.cpp  square.h
Chessino/mylibrary/: Piece.h  bishop.cpp  bishop.h  king.cpp  king.h  knight.cpp  knight.h  movement.h  mylibrary_global.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h  share_include.h  share_static_include.h  share_typedef.h  singleton.h
